Codigo/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hotels-bogota
  labels:
    name: hotels-bogota
