Codigo/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hotels-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization"
spec:
  rules:
  - host: hotels-bogota.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hotels-frontend-service
            port:
              number: 5000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: hotels-api-service
            port:
              number: 9090
